_kube/istio/app/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-namespace
  labels:
    istio-injection: enabled
