_kube/istio/app/httpbin-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: httpbin-namespace
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: httpbin-namespace
spec:
  hosts:
    - "*"
  gateways:
    - httpbin-gateway
  http:
    - route:
      - destination:
          host: httpbin
          subset: v1
          port:
            number: 8000
        weight: 50

      - destination:
          host: httpbin
          subset: v2
          port:
            number: 8000
        weight: 50


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin-vs-rule
  namespace: httpbin-namespace

spec:
  host: httpbin
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
